2010-04-29  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Fixing some references.

2010-04-28  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Adding functional time information and fixing some references.

2010-04-27  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/Benchmark-Module.zip: Adding benchmark files.
	* generator/Benchmark-Stats.zip: Likewise.
	* generator/Benchmark-Summary.zip: Likewise.


	* generator/runScriptAT.sh: Put command as the 1st param.
	* generator/runScriptET.sh: Likewise.

2010-04-26  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/genTopologyCore.sh: Fixing bug in creating result directory.

	* generator/plotting.sh: Generate plotting time data for a parameter setting.

	* generator/summaryAT.sh: Create summary information for all topology.
	* generator/summaryStatsAT.sh: Likewise.

	* generator/runScriptAT.sh: Run benchmark for all topology.

	* generator/genParameterSetting.sh: Adding comments.
	* generator/genTopology.sh: Likewise.
	* generator/summaryET.sh: Likewise.
	* generator/summaryStatsET.sh: Likewise.
	* generator/runScriptET.sh: Likewise.

	* generator/genTopologyCore.sh: Adding looping on constant, generate for all topology.

	* generator/summaryET.sh: Adding comments.
	* generator/runScriptET.sh: Likewise.

	* generator/plotting.sh: Create plotting data for gnuplot.

	* generator/summaryStatsET.sh: Creating statistical information from summary.
	* generator/stats.awk: Likewise.

2010-04-25  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/summaryET.sh: Create file summary for each parameter setting.

	* generator/runScriptET.sh: Run benchmark for a topology.

	* generator/genTopologyCore.sh: Renaming from generator/genExampleCore.sh.

	* generator/genTopology.sh: Renaming from generator/genExample.sh.

	* include/dlvhex/MLPSolver.hpp: Add option --forget (forgetting instantiation)